Name:                   cortana-portfolio
Version:                0.0.0
Author:                 Getty Ritter<gdritter@galois.com>
Maintainer:             Getty Ritter<gdritter@galois.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Executable cortana-portfolio
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5, Spock, containers

Source-Repository head
  Type:                 git
--  Location:
